src/test/ui/resolve/issue-69401-trait-fn-no-body-ty-local.stderr
error[E0573]: expected type, found local variable `b`
  --> $DIR/issue-69401-trait-fn-no-body-ty-local.rs:4:53
   |
LL |     fn fn_with_type_named_same_as_local_in_param(b: b);
   |                                                     ^ not a type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
